# fusao-ekf-husky-lar

./: .gitignore  CMakeLists.txt  README.md  package.xml
analise/: analisa_resultados.py
config/: ekf_odom.yaml  ekf_odom_imu.yaml  ekf_odom_imu_gps.yaml  navsat_transform.yaml
launch/: fusao_odom.launch  fusao_odom_imu.launch  fusao_odom_imu_gps.launch
resultados/comparacao/: resumo_comparativo.csv
resultados/odom/: erros.csv  metricas.csv
resultados/odom_imu/: erros.csv  metricas.csv
resultados/odom_imu_gps/: erros.csv  metricas.csv
scripts/: drive_path.py  fusion_error.py  gt_odom.py
